--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -1,4 +1,4 @@
-.App {
+.app {
   height: 100vh;
   background-color: #1a202c;
   overflow: scroll;
@@ -13,7 +13,7 @@
   padding: 0 30px 0 30px;
 }
 
-.authed-container {
+.authedContainer {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -27,19 +27,19 @@
   color: white;
 }
 
-.sub-text {
+.subText {
   font-size: 25px;
   color: white;
 }
 
-.gradient-text {
+.gradientText {
   background: -webkit-linear-gradient(left, #60c657 30%, #35aee2 60%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.cta-button {
+.ctaButton {
   height: 45px;
   border: 0;
   width: auto;
@@ -52,20 +52,20 @@
   color: white;
 }
 
-.connect-wallet-button {
+.connectWalletButton {
   background: -webkit-linear-gradient(left, #60c657, #35aee2);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
 }
 
-.submit-gif-button {
+.submitGifButton {
   background: -webkit-linear-gradient(left, #4e44ce, #35aee2);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
   margin-left: 10px;
 }
 
-.footer-container {
+.footerContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -76,18 +76,18 @@
   padding-bottom: 45px;
 }
 
-.twitter-logo {
+.twitterLogo {
   width: 35px;
   height: 35px;
 }
 
-.footer-text {
+.footerText {
   color: white;
   font-size: 16px;
   font-weight: bold;
 }
 
-.gif-grid {
+.gifGrid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 1rem;
@@ -96,7 +96,7 @@
   padding: 0;
 }
 
-.gif-grid .gif-item {
+.gifGrid .gifItem {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -104,14 +104,14 @@
   align-self: center;
 }
 
-.gif-item img {
+.gifItem img {
   width: 100%;
   height: 200px;
   border-radius: 10px;
   object-fit: cover;
 }
 
-.connected-container input[type='text'] {
+.connectedContainer input[type='text'] {
   display: inline-block;
   color: white;
   padding: 10px;
@@ -125,6 +125,6 @@
   margin: 50px auto;
 }
 
-.connected-container button {
+.connectedContainer button {
   height: 50px;
 }
